--- a/my/templates/proyectoManager.html
+++ b/my/templates/proyectoManager.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -229,6 +230,8 @@
 		</fieldset>
 	</form>
 </div>
+{% endblock %} 
+{% block body %}
 <script>
 	/* variable permite indicar si se está cargando un nuevo item de datos */
 	var bandera;
@@ -265,10 +268,10 @@
 												observacion : $(
 														"#observacion")
 														.val(),
-												idProjectLeader : 12
-														/*$(
+												idProjectLeader :
+														$(
 														"#idProjectLeader")
-														.val()*/,
+														.val(),
 												estado : $(
 														"#estado")
 														.val()
@@ -321,13 +324,11 @@
 														observacion : $(
 																"#observacion")
 																.val(),
-														idProjectLeader : $(
-																"#idProjectLeader")
-																.val(),
+														idProjectLeader :{{session['username']}},
 														estado : $(
 																"#estado")
 																.val()
-														
+
 													},
 													function(data, status) {
 
@@ -384,7 +385,7 @@
 		}
 		/* se cargan los elementos HTML segun la fila seleccionada*/
 		var rowdata = $('#list').getRowData(row);
-		alert(rowdata.idProjectLeader)
+		/*alert(rowdata.idProjectLeader)*/
 		$("#idProyecto").val(rowdata.idProyecto).attr('disabled', false);
 		$("#nombreProyecto").val(rowdata.nombreProyecto).attr('disabled', false);
 		$("#idProjectLeader").val(rowdata.idProjectLeader).attr('disabled', false);
@@ -441,7 +442,7 @@
 </script>
 <div id='msgbox' title='' style='display: none'></div>
 
-{% endblock %} {% block body %}
+
 
 <tr>
 	<td><div>
