funciona ABCM proyecto, no filtra por proyecto

--- a/my/templates/proyectoManager.html
+++ b/my/templates/proyectoManager.html
@@ -324,7 +324,9 @@
 														observacion : $(
 																"#observacion")
 																.val(),
-														idProjectLeader :{{session['username']}},
+														idProjectLeader :$(
+																"#idProjectLeader")
+																.val(),
 														estado : $(
 																"#estado")
 																.val()
