Ya controla la fecha el ProyectoController

--- a/my/templates/proyectoManager.html
+++ b/my/templates/proyectoManager.html
@@ -235,6 +235,10 @@
 </div>
 {% endblock %} 
 {% block body %}
+<div>
+	<table id="listMiembros"></table>
+	<div id="pagerMiembros"></div>
+</div>
 <script>
 	/* variable permite indicar si se está cargando un nuevo item de datos */
 	var bandera;
