--- a/my/templates/usuarioManager.html
+++ b/my/templates/usuarioManager.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 {% block header %}
-<title>WAPM</title>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 
@@ -14,21 +14,7 @@
 	jQuery(document)
 			.ready(
 					function() {
-						var categories = [ "All", "sport", "science" ];
-						var categoriesStr = ":All;1:sport;2:science";
-						var subcategories = [ "All", "football", "formel 1",
-								"physics", "mathematics" ];
-						var subcategoriesStr = ":All;1:football;2:formel 1;3:physics;4:mathematics";
-						var mydata = [ {
-							idUsuario : 0,
-							NombreUsuario : "Lukas Podolski",
-							Nombre : "Lukas Podolski",
-							Apellido : "Lukas Podolski",
-							email : "lalal"
-						},
-
-						];
-
+						
 						var grid = jQuery("#list")
 								.jqGrid(
 										{
@@ -49,57 +35,57 @@
 													{
 														name : 'idUsuario',
 														index : 'idUsuario',
-														width : 200,
+														
 														hidden : true
 													},
 													{
 														name : 'ci',
 														index : 'ci',
-														width : 200,
+														
 														hidden : true
 													},
 													{
 														name : 'nombreUsuario',
 														index : 'nombreUsuario',
-														width : 200
+														
 													},
 													{
 														name : 'nombre',
 														index : 'nombre',
-														width : 200
+														
 													},
 													{
 														name : 'apellido',
 														index : 'apellido',
-														width : 200
+														
 													},
 													{
 														name : 'pass',
 														index : 'pass',
-														width : 200,
+														
 														hidden : true
 													},
 													{
 														name : 'email',
 														index : 'email',
-														width : 200
+														
 													},
 													{
 														name : 'direccion',
 														index : 'direccion',
-														width : 200,
+														
 														hidden : true
 													},
 													{
 														name : 'telefono',
 														index : 'telefono',
-														width : 200,
+														
 														hidden : true
 													},
 													{
 														name : 'observacion',
 														index : 'observacion',
-														width : 200,
+														
 														hidden : true
 													},
 													{
@@ -688,15 +674,21 @@
 			<div id="pager"></div>
 		</div></td>
 	<td><div>
-
-			<input type="button" name="nuevo" value="Nuevo" onclick='agregar()' />
-			<input type="button" name="detalle" onclick='modificar();'
+			<br></br>
+			<input id="btAgregar" type="button" name="nuevo" value="Nuevo" onclick='agregar()' />
+			<input id="btModificar" type="button" name="detalle" onclick='modificar();'
 				value="Modificar" /> 
-			<input type="button" name="cambiarPass"
+			<input id="btCambiarPass" type="button" name="cambiarPass"
 				value="Cambiar Pass" onclick='cambiarPass()' />
-			<input type="button" name="consultar"
+			<input id="btConsultar" type="button" name="consultar"
 				value="Consultar" onclick='consultar()' />
-
+			<br></br>
+			<script>
+			$("#btAgregar").button();
+			$("#btModificar").button();
+			$("#btCambiarPass").button();
+			$("#btConsultar").button();
+			</script>
 		</div></td>
 		
 </tr>
