--- a/my/templates/index.html
+++ b/my/templates/index.html
@@ -29,8 +29,9 @@
 }
 </style>
     
+   <form id="login" method="get" action="/usuarioManager/"></form> 
   <div id="dialogoLogin" title="Login">
-	<form id="login" method="get" action="{{url_for('usuarioManager')}}">
+	<form ">
 		<fieldset class="fieldset">
 				<table>
 					<tr>
